--- a/main.ipynb
+++ b/main.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "data = list(zip(x, y))\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=)\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
     "\n",
     "knn.fit(data, classes)"
    ]
